--- a/Interim_Report.tex
+++ b/Interim_Report.tex
@@ -96,8 +96,10 @@ We have implemented this module as a domain-independent preprocessor, that does 
 
 \end{itemize}
 %-----------------------------------------------------------------------------------------------------------------------------------------------------------
-\newpage
 \section{\textbf{Conclusion}}
+We cannot draw any conclusion until the implementation is complete.
+
+\newpage
 
 \begin{thebibliography}{1}
 \bibitem{ESA}
