--- a/Interim_Report.tex
+++ b/Interim_Report.tex
@@ -14,7 +14,7 @@
 
 \author{
     \IEEEauthorblockN{Ayush Jaiswal, Anunay Bhargava}\\
-   \emph{Project Guide : Prof. Abdul Nazeer K A, Associate Professor, Dept. of CSE\\National Institute of Techonology Calicut}
+   \emph{Guided by: Prof. Abdul Nazeer K A, Associate Professor, Dept. of CSE\\National Institute of Techonology Calicut}
 }
 
 % make the title area
