--- a/Interim_Report.tex
+++ b/Interim_Report.tex
@@ -57,7 +57,7 @@ Insights into Explicit Semantic Analysis by Gottron, Anderka and Stein (2011) \c
 
 \section{\textbf{Motivation}}
 The ESA model outperformed previously developed statistical, lexical, other Wikipedia-based methods, and Latent Semantic Analysis, but it is a very general approach towards finding semantic relatedness of text fragments and has some subtle flaws. These are discussed as follows.\\
-An obvious flaw in the Wikipedia-based model is that each word can map to various concepts across multiple domains. For example, ``cancer'' shows associations to the Wikipedia articles on the disease cancer, the constellation cancer, and the astrological sign cancer, to name a few. While the associations of the other words in the text fragment are expected to disambiguate the sense of cancer, it can be seen that there should be no such need when the text fragments are known to lie in a particular domain.\\
+An obvious flaw in the Wikipedia-based model is that each word can map to various concepts across multiple domains. For example, ``cancer'' shows associations to the Wikipedia articles on the disease cancer, the constellation cancer, and the astrological sign cancer, to name a few. While the associations of the other words in the text fragment are expected to disambiguate the sense of cancer, it can be seen that the meaning of ``cancer'' is distorted by multiple mappings. Moreover, the large number of mappings is not needed when the text fragments are known to lie in a particular domain.\\
 A major flaw in Wikipedia-based ESA is that the large number of articles in Wikipedia makes the development of the model time and space consuming as the weight for each concept has to be computed to find the final representation of text fragments as a weighted vector of concepts. The same problem arises when the semantic relatedness of two text fragments is computed.\\
 The large number of articles also adds significant distortion to the concept space. The orthogonality of concepts, referred to as concept hypothesis, forms the basis of the ESA model. On close analysis, we found that domain-specific knowledge-bases are more orthogonal in concepts than Wikipedia. For example, the Wikipedia article on Diabetes Mellitus not only describes the same in general but also explains its different types. Along with that, separate Wikipedia articles are present for each type of Diabetes Mellitus. On the other hand, MedlinePlus has a topic for Diabetes Mellitus which explains it in general, and separate topics for its each type. We can see that the concepts in Wikipedia are thus more distorted. This leads us to question the claimed orthogonality of Wikipedia concepts. This problem is aggravated by the fact that Wikipedia is open for editing to everyone, and the articles can thus become more repetitive as people add more information to them. On the other hand, domain-specific knowledge-bases can be chosen from well-maintained sources, such as MedlinePlus for topics related to diseases, conditions, and wellness issues. Such knowledge-bases can be expected to be less repetitive in nature, and the concept space can then be expected to be less distorted.\\
 Apart from the above flaws, the terms with lesser frequencies such as proper names, slangs, and technical terms are omitted during the process. Specialized Wikipedia articles are also removed from the knowledge-base, stating that they are too specific. By doing so, ESA becomes inapplicable to finding semantic relatedness of text fragments that are themselves specialized, such as those extracted from research papers or domain-specific articles. Another important point to note is that ESA relies heavily on the overlap of vocabulary in the text fragments being compared and the knowledge-base. Hence, it makes more sense to use domain-specific knowledge-bases to increase the chances of such overlap.\\
