--- a/Report.tex
+++ b/Report.tex
@@ -21,7 +21,7 @@
 \maketitle
 
 \begin{abstract}
-Explicit Semantic Analysis with Wikipedia as its knowledge-base has been found to perform well for finding the semantic relatedness between text fragments. The method works by representing text fragments as weighted vectors of concepts derived from Wikipedia. Semantic relatedness between text fragments is then computed by using vector comparison metrics such as the cosine metric. Although, this method is found to perform very well for the task, and to correlate with human judgements: r = 0.56 - 0.75 for individual words and r = 0.60 - 0.72 for texts, it is not applicable in the case of domain-specific specialized text fragments, such as those extracted from research papers, or complete documents pertaining to specific domains. We propose an extension of ESA which uses domain-specific knowledge-bases, such as MedlinePlus for text related to diseases, conditions, and wellness issues, and provides an improvement in the computation of semantic relatedness of specialized text fragments. We also incorporate the use of preprocessing tasks that have been modified to suit the needs of different domains. Our aim is to develop a framework in which the domain-specific knowledge base and the specialized preprocessing tasks can be easily plugged in to find the semantic relatedness of text fragments in that domain.
+Explicit Semantic Analysis (ESA) with Wikipedia as its knowledge-base has been found to perform well for finding the semantic relatedness between text fragments. The method works by representing text fragments as weighted vectors of concepts derived from Wikipedia. Semantic relatedness between text fragments is then computed by using vector comparison metrics such as the cosine metric. Although, this method is found to perform very well for the task, and to correlate with human judgements, it is not applicable in the case of domain-specific specialized text fragments, such as those extracted from research papers, or complete documents pertaining to specific domains. We propose an extension of ESA which uses domain-specific knowledge-bases, such as MedlinePlus for text related to diseases, conditions, and wellness issues, and provides an improvement in the computation of semantic relatedness of specialized text fragments. We also incorporate the use of preprocessing tasks that have been modified to suit the needs of different domains. Our aim is to develop a framework in which the domain-specific knowledge base and the specialized preprocessing tasks can be easily plugged in to find the semantic relatedness of text fragments in that domain.
 \end{abstract}
 
 %-----------------------------------------------------------------------------------------------------------------------------------------------------------
@@ -43,7 +43,7 @@ The ESA model can be used to find the semantic relatedness between text fragment
 
 \subsection {\textbf{Computing Domain-Specific Semantic Relatedness Using Domain-Specific ESA}}
 
-Although, the ESA model using Wikipedia as knowledge-base performs well for general topics in calculating the semantic relatedness, it has subtle disadvantages \cite{insights}. One disadvantage is the high dimensionality of the concept space due to the copious number of articles present in Wikipedia, which introduces significant noise and distortion in the concept space. Another disadvantage that results from this is that specialized concepts either receive low association weights or are removed while filtering supposedly insignificant concepts. These disadvantages make this model inapplicable to finding the semantic relatedness of specialized text fragments or those that are very specific in nature, but contain words that occur in various domains. Moreover, using a broad knowledge-base means that the vocabulary in the articles representing concepts might not overlap with that of the domain-specific text fragments. ESA depends substantially on this vocabulary overlap and, hence, using a domain-specific knowledge-base makes more sense as there is a greater chance of such overlap.\\
+Although the ESA model using Wikipedia as knowledge-base performs well for general topics in calculating the semantic relatedness, it has subtle disadvantages \cite{insights}. One disadvantage is the high dimensionality of the concept space due to the copious number of articles present in Wikipedia, which introduces significant noise and distortion in the concept space. Another disadvantage that results from this is that specialized concepts either receive low association weights or are removed while filtering supposedly insignificant concepts. These disadvantages make this model inapplicable to finding the semantic relatedness of specialized text fragments or those that are very specific in nature, but contain words that occur in various domains. Moreover, using a broad knowledge-base means that the vocabulary in the articles representing concepts might not overlap with that of the domain-specific text fragments. ESA depends substantially on this vocabulary overlap and, hence, using a domain-specific knowledge-base makes more sense as there is a greater chance of such overlap.\\
 We propose an extension of the ESA model using domain-specific specialized knowledge-bases. The concept space would thus have a dimensionality significantly less than that from Wikipedia, and will have specialized documents included in the knowledge-base. This will reduce the computational requirements of the model and is expected to work on specialized documents or text fragments of the respective domain with better results as it takes care of the aforementioned disadvantages of the Wikipedia-based ESA.  We choose the field of diseases and health topics as our domain with concepts derived as different topics in MedlinePlus (www.nlm.nih.gov/medlineplus/‎) dataset. Topics in the MedlinePlus dataset contain information only about diseases, conditions, and wellness issues.\\
 Additionally, we aim to build a framework for computing semantic relatedness of domain-specific text fragments that allows the knowledge-base and the domain-specific text preprocessing modules to be plugged into the framework thus making it applicable for any domain in general, by keeping the framework domain-independent.
 
@@ -86,7 +86,7 @@ We chose the domain of diseases, conditions, and wellness issues, and our knowle
 We have been able to run our code on text-fragment pairs that we extracted from MedlinePlus articles. To find out how well the semantic relatedness measures generated by our approach correlate with human judgements, we are carrying out a survey. People participating in the survey are required to rate how well text-fragment pairs are related to each other on a scale of 1-10 (1 being ``totally unrelated'' and 10 being ``exactly same''). Once our survey is complete, we will find the correlation between the human judgements and the scores generated by our code. Correlation with human judegements has been used in earlier work on finding semantic relatedness of text as a measure of how well a particular approach works.
 %-----------------------------------------------------------------------------------------------------------------------------------------------------------
 \section{\textbf{Conclusion}}
-We cannot draw any conclusion until the survey is complete, and the correlation of generated scores with human judgements is found.
+We have developed a domain-independent framework for finding the semantic relatedness of domain-specific text fragments. The preprocessing tasks that have been specially developed for a particular domain can be easily plugged into our framework, along with the knowledge-base of that domain. Using ESA with domain-specific knowledge-base to find the semantic relatedness of domain-specific text fragments solves the problems of concept orthogonality and dimensionality that are present in Wikipedia-based ESA. Thus, we believe that our method is more applicable in the case of specialized text fragments such as those extracted from research papers or articles.
 
 \newpage
 
